test/neg/neg-global_ptr2.errc
global_ptr<T> does not support reference types as T
